Disable schedule and push triggers in deploy-french.yml
Commented out the schedule and push triggers due to issues.

--- a/.github/workflows/deploy-french.yml
+++ b/.github/workflows/deploy-french.yml
@@ -1,12 +1,13 @@
 name: Daily Translation & Build
 
 on:
-  schedule:
-    - cron: '0 6 * * *'
+  #  NOT WORKING ANYMORE SINCE NO HASHNODE ENDPOINT DUE TO COPYRIGHT ISSUE...
+  #schedule:
+  #  - cron: '0 6 * * *'
   workflow_dispatch:
-  push:
-    branches:
-      - french
+  #push:
+  #  branches:
+  #    - french
 
 permissions:
   contents: read
